feat: added info endpoints for overall server, and the individual agents
involved updating the ws-com-framework to 1.1
